Add grug subscriptions

--- a/dango/indexer/httpd/Cargo.toml
+++ b/dango/indexer/httpd/Cargo.toml
@@ -30,7 +30,9 @@ clap                     = { workspace = true }
 dango-indexer-clickhouse = { workspace = true, features = ["async-graphql"] }
 dango-indexer-sql        = { workspace = true, features = ["async-graphql"] }
 dango-types              = { workspace = true, features = ["async-graphql"] }
+grug-app                 = { workspace = true }
 grug-httpd               = { workspace = true }
+grug-types               = { workspace = true, features = ["async-graphql"] }
 indexer-httpd            = { workspace = true, features = ["tracing"] }
 indexer-sql              = { workspace = true, features = ["async-graphql"] }
 itertools                = { workspace = true }
