--- a/networks/localdango/configs/dango/config/app.toml
+++ b/networks/localdango/configs/dango/config/app.toml
@@ -122,3 +122,16 @@ sample_rate = 1.0
 
 # Traces sample rate for Sentry.
 traces_sample_rate = 1.0
+
+################################################################################
+###                            Pyth Configuration                            ###
+################################################################################
+
+[pyth]
+
+# PythLazer endpoints. This is a Vec<String>.
+# It's possible to omit this field renaming it to _endpoints.
+endpoints = ["wss://pyth-lazer-0.dourolabs.app/v1/stream"]
+
+# PythLazer access token.
+access_token = "gr6DS1uhFL7dUrcrboueU4ykRk2XhOfT3GO-demo"
