--- a/dango/dex/Cargo.toml
+++ b/dango/dex/Cargo.toml
@@ -13,6 +13,7 @@ version       = { workspace = true }
 # If enabled, Wasm exports won't be created. This allows this contract to be
 # imported into other contracts as a library.
 library = []
+metrics = ["dep:metrics"]
 tracing = ["dep:tracing"]
 
 [dependencies]
@@ -21,6 +22,7 @@ dango-account-factory = { workspace = true, features = ["library"] }
 dango-oracle          = { workspace = true, features = ["library"] }
 dango-types           = { workspace = true }
 grug                  = { workspace = true }
+metrics               = { workspace = true, optional = true }
 tracing               = { workspace = true, optional = true }
 
 [dev-dependencies]
