--- a/networks/localdango/configs/dango/config/app.toml
+++ b/networks/localdango/configs/dango/config/app.toml
@@ -130,8 +130,9 @@ traces_sample_rate = 1.0
 [pyth]
 
 # PythLazer endpoints. This is a Vec<String>.
-# It's possible to omit this field renaming it to _endpoints.
+# If the list is empty, PythLazer oracle is disabled.
 endpoints = ["wss://pyth-lazer-0.dourolabs.app/v1/stream"]
 
 # PythLazer access token.
+# If the string is empty, PythLazer oracle is disabled.
 access_token = "gr6DS1uhFL7dUrcrboueU4ykRk2XhOfT3GO-demo"
