--- a/deploy/roles/full-app/templates/testnet/config/app.toml
+++ b/deploy/roles/full-app/templates/testnet/config/app.toml
@@ -85,10 +85,10 @@ port = 9191
 [tendermint]
 
 # Tendermint RPC listening address.
-rpc_addr = "http://{{ cometbft_host }}:26657"
+rpc_addr = "http://{{ cometbft_host }}:{{ cometbft_rpc_port }}"
 
 # Tendermint ABCI listening address.
-abci_addr = "0.0.0.0:26658"
+abci_addr = "0.0.0.0:{{ cometbft_abci_port }}"
 
 ################################################################################
 ###                        Transaction Configuration                         ###
