--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -373,6 +373,13 @@ jobs:
 
             docker manifest push --purge ghcr.io/left-curve/left-curve/dango:latest
           fi
+
+          if [ "${{ github.event_name }}" == "pull_request" ]; then
+            docker manifest create ghcr.io/left-curve/left-curve/dango:pr-${{ github.event.pull_request.number }}-latest \
+              --amend ghcr.io/left-curve/left-curve/dango:${{ env.GIT_COMMIT }}-amd64 \
+              --amend ghcr.io/left-curve/left-curve/dango:${{ env.GIT_COMMIT }}-arm64
+            docker manifest push --purge ghcr.io/left-curve/left-curve/dango:pr-${{ github.event.pull_request.number }}-latest
+          fi
       - name: Docker Deploy Summary
         run: |
           echo "# 🐳 Docker Multi-arch Manifest" >> $GITHUB_STEP_SUMMARY
