--- a/deploy/full-app.yml
+++ b/deploy/full-app.yml
@@ -7,7 +7,7 @@
     tailscale_ip: "{{ hostvars[inventory_hostname]['ansible_' + tailscale_iface].ipv4.address }}"
     dango_image_tag: "{{ lookup('pipe','git rev-parse HEAD') }}"
     ghcr_user: "{{ lookup('env','GITHUB_USER') }}"
-    ghcr_token: "{{ lookup('env','GITHUB_TOKEN_READ_PACKAGE') }}"
+    ghcr_token: "{{ lookup('env','GITHUB_TOKEN') }}"
     timestamp: "{{ ansible_date_time.year }}{{ ansible_date_time.month }}{{ ansible_date_time.day }}{{ ansible_date_time.hour }}{{ ansible_date_time.minute }}{{ ansible_date_time.second }}"
     deployment_name: "{% if pr_name is defined and pr_name != '' %}{{ pr_name }}-{% endif %}{{ timestamp }}"
     COMETBFT_NODE_KEY: "{{ lookup('env', (dango_network|upper) ~ '_COMETBFT_NODE_KEY') }}"
