--- a/deploy/roles/full-app/tasks/main.yml
+++ b/deploy/roles/full-app/tasks/main.yml
@@ -151,7 +151,7 @@
     url: "https://api.github.com/repos/left-curve/left-curve/deployments"
     method: POST
     headers:
-      Authorization: "token {{ github_token }}"
+      Authorization: "token {{ ghcr_token }}"
       Accept: "application/vnd.github.v3+json"
     body_format: json
     body:
@@ -168,7 +168,7 @@
     url: "https://api.github.com/repos/left-curve/left-curve/deployments/{{ deployment_result.json.id }}/statuses"
     method: POST
     headers:
-      Authorization: "token {{ github_token }}"
+      Authorization: "token {{ ghcr_token }}"
       Accept: "application/vnd.github.v3+json"
     body_format: json
     body:
