--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -501,6 +501,7 @@ jobs:
     if: github.event_name == 'pull_request'
     permissions:
       packages: read
+      deployments: write
     needs: [frontend-push-manifest, backend-push-manifest]
     runs-on: [self-hosted]
     env:
