--- a/.github/workflows/cleanup-pr.yaml
+++ b/.github/workflows/cleanup-pr.yaml
@@ -10,18 +10,30 @@ jobs:
     steps:
       - name: Delete PR deployment
         run: |
-          # Get deployment ID
-          DEPLOYMENT_ID=$(curl -s \
-            -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" \
-            "https://api.github.com/repos/${{ github.repository }}/deployments?environment=pr-${{ github.event.pull_request.number }}" \
-            | jq -r '.[0].id')
+          # Define environments to clean up
+          ENVIRONMENTS=("frontend" "api" "faucet")
 
-          # Set to inactive
-          curl -X POST \
-            -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" \
-            -H "Accept: application/vnd.github.v3+json" \
-            "https://api.github.com/repos/${{ github.repository }}/deployments/$DEPLOYMENT_ID/statuses" \
-            -d '{"state":"inactive","description":"PR closed - deployment deactivated"}'
+          for env in "${ENVIRONMENTS[@]}"; do
+            echo "Cleaning up pr-${{ github.event.pull_request.number }}-${env}"
+
+            # Get deployment IDs for this environment
+            DEPLOYMENT_IDS=$(curl -s \
+              -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" \
+              "https://api.github.com/repos/${{ github.repository }}/deployments?environment=pr-${{ github.event.pull_request.number }}-${env}" \
+              | jq -r '.[].id')
+
+            # Set each deployment to inactive
+            for id in $DEPLOYMENT_IDS; do
+              if [ "$id" != "null" ] && [ -n "$id" ]; then
+                echo "Deactivating deployment ID: $id"
+                curl -X POST \
+                  -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" \
+                  -H "Accept: application/vnd.github.v3+json" \
+                  "https://api.github.com/repos/${{ github.repository }}/deployments/${id}/statuses" \
+                  -d '{"state":"inactive","description":"PR closed - deployment deactivated"}'
+              fi
+            done
+          done
 
       - name: Delete PR container images
         run: |
