--- a/deploy/roles/full-app/tasks/main.yml
+++ b/deploy/roles/full-app/tasks/main.yml
@@ -149,7 +149,7 @@
 
 - name: Create GitHub deployments
   uri:
-    url: "https://api.github.com/repos/{{ github_repo }}/deployments"
+    url: "https://api.github.com/repos/left-curve/left-curve/deployments"
     method: POST
     headers:
       Authorization: "token {{ github_token }}"
@@ -171,7 +171,7 @@
 
 - name: Set deployment statuses
   uri:
-    url: "https://api.github.com/repos/{{ github_repo }}/deployments/{{ item.json.id }}/statuses"
+    url: "https://api.github.com/repos/left-curve/left-curve/deployments/{{ item.json.id }}/statuses"
     method: POST
     headers:
       Authorization: "token {{ github_token }}"
