adding pyth folder as path for workflow

--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -23,6 +23,7 @@ on:
       - "grug/**"
       - "hyperlane/**"
       - "indexer/**"
+      - "pyth/**"
       - "Cargo.toml"
       - "Cargo.lock"
       - "clippy.toml"
@@ -42,6 +43,7 @@ on:
       - "grug/**"
       - "hyperlane/**"
       - "indexer/**"
+      - "pyth/**"
       - "Cargo.toml"
       - "Cargo.lock"
       - "clippy.toml"
