--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -373,6 +373,13 @@ jobs:
 
             docker manifest push --purge ghcr.io/left-curve/left-curve/dango:latest
           fi
+
+          if [ "${{ github.event_name }}" == "pull_request" ]; then
+            docker manifest create ghcr.io/left-curve/left-curve/dango:pr-${{ github.event.pull_request.number }}-latest \
+              --amend ghcr.io/left-curve/left-curve/dango:${{ env.GIT_COMMIT }}-amd64 \
+              --amend ghcr.io/left-curve/left-curve/dango:${{ env.GIT_COMMIT }}-arm64
+            docker manifest push --purge ghcr.io/left-curve/left-curve/dango:pr-${{ github.event.pull_request.number }}-latest
+          fi
       - name: Docker Deploy Summary
         run: |
           echo "# 🐳 Docker Multi-arch Manifest" >> $GITHUB_STEP_SUMMARY
@@ -490,13 +497,15 @@ jobs:
           fi
           echo "| **Architectures:** | amd64, arm64 |" >> $GITHUB_STEP_SUMMARY
 
-  deploy-dango:
-    if: github.ref == 'refs/heads/main'
+  deploy:
     permissions:
       packages: read
-    needs: [backend-push-manifest]
+      deployments: write
+    needs: [frontend-push-manifest, backend-push-manifest]
     runs-on: [self-hosted]
     env:
+      PR_NUMBER: ${{ github.event.pull_request.number }}
+      PR_BRANCH: ${{ github.event.pull_request.head.ref }}
       DANGO_DB_PASSWORD: ${{ secrets.DANGO_DB_PASSWORD }}
       DB_PASSWORD: ${{ secrets.DB_PASSWORD }}
       DANGO_CLICKHOUSE_PASSWORD: ${{ secrets.DANGO_CLICKHOUSE_PASSWORD }}
@@ -535,18 +544,26 @@ jobs:
           ansible-galaxy collection install -r requirements.yml
       - name: Run Ansible playbook
         run: |
-          cd deploy
-          pipx ensurepath
-          ansible-playbook reset-cometbft.yml --limit 100.96.253.40 -e '{"dango_networks":["devnet"]}'
-          ansible-playbook reset-dango.yml --limit 100.96.253.40 -e '{"dango_networks":["devnet"]}'
-          ansible-playbook cometbft.yml --limit 100.96.253.40 -e '{"dango_networks":["devnet"]}'
-          ansible-playbook dango.yml --tags setup --limit 100.96.253.40 -e '{"dango_networks":["devnet"]}'
-          ansible-playbook dango.yml --limit 100.96.253.40 \
-            --skip-tags setup \
-            -e dango_image_tag=${{ env.GIT_COMMIT }} \
-            -e "dango_db_password=$DANGO_DB_PASSWORD" \
-            -e '{"dango_networks":["devnet"]}'
-          ansible-playbook bots.yml --limit 100.96.253.40 -e '{"dango_networks":["devnet"]}' -e faucet_version=latest
+          if [ "${{ github.ref }}" == "refs/heads/main" ]; then
+            cd deploy
+            pipx ensurepath
+            ansible-playbook reset-cometbft.yml --limit 100.96.253.40 -e '{"dango_networks":["devnet"]}'
+            ansible-playbook reset-dango.yml --limit 100.96.253.40 -e '{"dango_networks":["devnet"]}'
+            ansible-playbook cometbft.yml --limit 100.96.253.40 -e '{"dango_networks":["devnet"]}'
+            ansible-playbook dango.yml --tags setup --limit 100.96.253.40 -e '{"dango_networks":["devnet"]}'
+            ansible-playbook dango.yml --limit 100.96.253.40 \
+              --skip-tags setup \
+              -e dango_image_tag=${{ env.GIT_COMMIT }} \
+              -e "dango_db_password=$DANGO_DB_PASSWORD" \
+              -e '{"dango_networks":["devnet"]}'
+            ansible-playbook bots.yml --limit 100.96.253.40 -e '{"dango_networks":["devnet"]}' -e faucet_version=latest
+          fi
+
+          if [ "${{ github.event_name }}" == "pull_request" ]; then
+            cd deploy
+            pipx ensurepath
+            ansible-playbook full-app.yml -e deployment_name=pr-${{ github.event.pull_request.number }} -e github_pr_number=${{ github.event.pull_request.number }} -e github_sha=${{ github.event.pull_request.head.sha }}
+          fi
 
   localdango:
     timeout-minutes: 5
