--- a/deploy/full-app.yml
+++ b/deploy/full-app.yml
@@ -2,6 +2,7 @@
   become: true
   become_user: "{{ deploy_user }}"
   vars:
+    traefik_dir: "{{ ansible_env.HOME }}/traefik"
     tailscale_iface: tailscale0
     tailscale_ip: "{{ hostvars[inventory_hostname]['ansible_' + tailscale_iface].ipv4.address }}"
     dango_image_tag: "{{ lookup('pipe','git rev-parse HEAD') }}"
@@ -22,6 +23,11 @@
     quest_port: 0
     faucet_port: 0
     dango_frontend_port: 0
+    cometbft_p2p_port: 26656
+    cometbft_rpc_port: 26657
+    cometbft_metrics_port: 26660
+    cometbft_abci_port: 26658
+    traefik_enabled: false
   collections:
     - community.docker
     - community.clickhouse
