--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -15,34 +15,29 @@ catalog:
   "@rsbuild/core": "^1.3.20"
   "@rsbuild/plugin-react": "^1.3.1"
   "react-refresh": "^0.14.2"
-  "vite": "^5.4.7"
-  "@vitejs/plugin-react-swc": "^3.5.0"
-  "vite-tsconfig-paths": "^5.0.1"
   "vitest": "^2.0.5"
-  "next": "14.2.5"
   "@inlang/paraglide-js": "2.0.0-beta.30"
   # UI
   "react": "^18.3.1"
   "react-dom": "^18.3.1"
-  "react-hook-form": "^7.53.0"
   "react-router-dom": "^6.26.2"
   "react-hot-toast": "^2.4.1"
   "@tanstack/react-query": "^5.59.0"
   "@tanstack/router-devtools": "^1.111.3"
   "@tanstack/react-router": "^1.111.3"
   "@tanstack/zod-adapter": "^1.111.3"
-  "nuqs": "^2.2.3"
   "zod": "^3.24.1"
   "zustand": "^5.0.1"
+  # Formatters
+  "date-fns": "^4.1.0"
   # Animations
   "framer-motion": "^11.11.7"
   # CSS
   "tailwindcss": "^3.4.13"
   "autoprefixer": "^10.4.20"
   "postcss": "^8"
-  "@unocss/postcss": "^0.63.3"
-  "@unocss/reset": "^0.63.3"
   # Types
   "@types/react": "^18.3.1"
   "@types/react-dom": "^18.3.1"
   "@types/node": "^20"
+  "@types/date-fns": "^2.6.3"
