Refactor full app ansible files

--- a/.github/workflows/cleanup-pr.yaml
+++ b/.github/workflows/cleanup-pr.yaml
@@ -60,6 +60,17 @@ jobs:
               -d "{\"names\":[\"$commit\", \"$commit-amd64\", \"$commit-arm64\"]}"
           done
 
+      - name: Install Ansible
+        run: |
+          pipx install ansible
+          pipx ensurepath
+          ln -f -s ~/.local/pipx/venvs/ansible/bin/ansible-galaxy ~/.local/bin/ansible-galaxy
+          ln -sf ~/.local/pipx/venvs/ansible/bin/ansible-playbook ~/.local/bin/ansible-playbook
+          cd deploy
+          ansible-galaxy collection install -r requirements.yml
+
       - name: Cleanup actual containers
         run: |
+          cd deploy
+          pipx ensurepath
           ansible-playbook delete-full-app.yml -e deployment_name=pr-${{ github.event.pull_request.number }}
