--- a/deploy/roles/traefik/tasks/main.yml
+++ b/deploy/roles/traefik/tasks/main.yml
@@ -14,6 +14,8 @@
 
 - name: Deploy all
   community.docker.docker_compose_v2:
+    pull: always
+    recreate: always
     project_src: "{{ traefik_dir }}"
     wait: true
     wait_timeout: 300
